# vmctl

./: .gitignore  Cargo.toml  README.md  vmctl.example.toml  vmctl.toml
.gitea/workflows/: apply.yaml
crates/backend/: Cargo.toml
crates/backend-native/: Cargo.toml
crates/backend-terraform/: Cargo.toml
crates/backend-terraform/src/: lib.rs
crates/backend-terraform/tests/fixtures/: lxc-module-main.tf.json  vm-module-main.tf.json
crates/backend-terraform/tests/fixtures/example-workspace/: main.tf.json  provider.tf.json
crates/backend-terraform/tests/fixtures/example-workspace/resources/kodi-htpc/: kodi.env
crates/backend-terraform/tests/fixtures/example-workspace/resources/kodi-htpc/scripts/: bootstrap-kodi.sh
crates/backend-terraform/tests/fixtures/example-workspace/resources/media-stack/: caddyfile.media  docker-compose.media  media-index.html  media.env  tailscale-setup.sh
crates/backend-terraform/tests/fixtures/example-workspace/resources/media-stack/scripts/: bootstrap-arr.sh  bootstrap-download-unpack.sh  bootstrap-jellio.sh  bootstrap-jellyfin.sh  bootstrap-jellysearch.sh  bootstrap-jellyseerr.sh  bootstrap-jellystat.sh  bootstrap-media.sh  bootstrap-node.sh  bootstrap-qbittorrent.sh  bootstrap-sabnzbd.sh  bootstrap-streamyfin.sh  bootstrap-tailscale.sh  bootstrap-ui-routing.sh  bootstrap-validate-streaming-stack.sh
crates/backend-terraform/tests/fixtures/example-workspace/resources/tailscale-gateway/: tailscale-setup.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/dependencies/: Cargo.toml
crates/domain/: Cargo.toml
crates/import/: Cargo.toml
crates/lockfile/: Cargo.toml
crates/packs/: Cargo.toml
crates/planner/: Cargo.toml
crates/provision/: Cargo.toml
crates/render/: Cargo.toml
crates/resources/: Cargo.toml
crates/resources/src/: lib.rs
crates/services/: Cargo.toml
crates/util/: Cargo.toml
crates/vmctl/: Cargo.toml
docs/: vpn-verification.md
packs/roles/: kodi_htpc.toml  media_stack.toml  tailscale_gateway.toml
packs/scripts/: bootstrap-arr.sh  bootstrap-download-unpack.sh  bootstrap-homarr.sh  bootstrap-jellio.sh  bootstrap-jellyfin-discovery.sh  bootstrap-jellyfin.sh  bootstrap-jellyseerr.sh  bootstrap-jellystat.sh  bootstrap-kodi-jellyfin.sh  bootstrap-kodi.sh  bootstrap-media.sh  bootstrap-qbittorrent.sh  bootstrap-sabnzbd.sh  bootstrap-streamyfin.sh  bootstrap-tailscale.sh  bootstrap-validate-streaming-stack.sh
packs/services/: bazarr.toml  caddy.toml  homarr.toml  jellyfin.toml  jellysearch.toml  jellyseerr.toml  jellystat-db.toml  jellystat.toml  prowlarr.toml  qbittorrent-vpn.toml  qbittorrent.toml  radarr.toml  sabnzbd.toml  seerr.toml  sonarr.toml
packs/templates/: caddyfile.media.hbs  docker-compose.media.hbs  kodi.env.hbs  media-index.html.hbs  media.env.hbs  tailscale-setup.sh.hbs
plans/: jellyfin-native-discovery-plan.md  jellyfin-streaming-stack-plan.md  jellyseerr-request-flow-tizen-plan.md  modular-vmctl-architecture-plan.md  resilient-media-pipeline-plan.md  stremio-jellyfin-fixes-plan.md  tailscale-only-media-routing-plan.md  vmctl-hybrid-plan-packs.md  vmctl_image_config_plan.md
resources/gitea/: resource.toml
resources/kodi-htpc/: resource.toml
resources/media-stack/: resource.toml
resources/tailscale-gateway/: resource.toml
scripts/: add-igpu-passthrough.sh  add-media-disk.sh  create-media-vm.sh  create-template.sh  media-stack-cleanup.sh  proxmox-host-tailscale.sh
services/autobrr/: service.toml
services/bazarr/: service.toml
services/caddy/: service.toml
services/cloudflared/: service.toml
services/container-runtime/: service.toml
services/flaresolverr/: service.toml
services/gluetun/: service.toml
(+59 files in other folders)
