[package]
name = "vmctl-backend-terraform"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
vmctl-backend.workspace = true
vmctl-domain.workspace = true
vmctl-services.workspace = true
vmctl-resources.workspace = true
vmctl-util.workspace = true

[dev-dependencies]
vmctl-config.workspace = true
vmctl-planner.workspace = true
