[package]
name = "vmctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vmctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
vmctl-backend.workspace = true
vmctl-backend-terraform.workspace = true
vmctl-config.workspace = true
vmctl-dependencies.workspace = true
vmctl-domain.workspace = true
vmctl-import.workspace = true
vmctl-lockfile.workspace = true
vmctl-packs.workspace = true
vmctl-planner.workspace = true
vmctl-provision.workspace = true
vmctl-render.workspace = true
