[package]
name = "vmctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vmctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
sha2.workspace = true
toml.workspace = true
vmctl-backend.workspace = true
vmctl-backend-terraform.workspace = true
vmctl-config.workspace = true
vmctl-dependencies.workspace = true
vmctl-domain.workspace = true
vmctl-import.workspace = true
vmctl-lockfile.workspace = true
vmctl-services.workspace = true
vmctl-resources.workspace = true
vmctl-planner.workspace = true
vmctl-provision.workspace = true
vmctl-render.workspace = true
vmctl-util.workspace = true
