[package]
name = "vmctl-resources"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
handlebars.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
vmctl-config.workspace = true
vmctl-domain.workspace = true
